<resources>
    <string name="app_name">Android Lab3</string>
    <string name="textEmail">Enter your email address: </string>
    <string name="show_text">Type email Here</string>
    <string name="textPassword">Type your password</string>
    <string name="show_password">Type password here</string>
    <string name="ButtonText">LOG IN</string>
    <string name="textName">Your name:</string>
    <string name="show_name">Enter your name</string>
    <string name="yourEmail">Your email:</string>
    <string name="enterEmail">Enter your email</string>
    <string name="picture">Your picture</string>
    <string name="profile">Your profile</string>
    <string name="pictureTaken">Click the button above to take a picture</string>
    <string name="button1">go to chat</string>
    <string name="send">send</string>
    <string name="textType">Type here</string>
    <string name="receive">Receive</string>
    <string name="back">back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Message Here</string>
    <string name="id_fragment">ID=</string>
    <string name="buttonhide">hide</string>
    <string name="airport">airport</string>
    <string name="bridge">bridge</string>
    <string name="jumper">jumper</string>
    <string name="embassy">embassy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="chatroom">chat page</string>
    <string name="weather">Weather Forcast</string>
    <string name="goback">go back to log in</string>

</resources>