<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/airport_item"
        android:icon="@drawable/airport"
        android:orderInCategory="1"
        android:title="@string/airport"
        app:showAsAction="always" />


    <item
        android:id="@+id/bridge_item"
        android:icon="@drawable/bridge"
        android:orderInCategory="2"
        android:title="@string/bridge"
        app:showAsAction="always" />


    <item
        android:id="@+id/jumper_item"
        android:icon="@drawable/jumper"
        android:orderInCategory="3"
        android:title="@string/jumper"
        app:showAsAction="always" />

    <item
        android:id="@+id/embassy_item"
        android:icon="@drawable/embassy"
        android:orderInCategory="4"
        android:title="@string/embassy"
        app:showAsAction="never" />
    <item
        android:id="@+id/chatroom_item"
        android:title="@string/chatroom"
        android:orderInCategory="5"
        app:showAsAction="never" />
    <item
        android:id="@+id/weather_item"
        android:title="@string/weather"
        android:orderInCategory="6"
        app:showAsAction="never" />
    <item
        android:id="@+id/goback_item"
        android:title="@string/goback"
        android:orderInCategory="7"
        app:showAsAction="never"/>
</menu>