<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/textEmail"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30dp"
        tools:visibility="visible" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/show_text"
        android:inputType="textEmailAddress"
        android:id="@+id/edittext1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30dp"
        tools:visibility="visible" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/show_password"
        android:inputType="textPassword"
        android:id="@+id/edittext1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/ButtonText" />


</LinearLayout>