<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/profile1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="1dp"
        android:text="@string/textName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_below="@id/name1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="-2dp"
        android:autofillHints="your name"
        android:inputType="text"
        android:text="@string/show_name"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/email11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/yourEmail"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/email22"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/email11"
        android:autofillHints="your email"
        android:inputType="textEmailAddress"
        android:text="@string/enterEmail"
        tools:ignore="LabelFor" />


    <TextView
        android:id="@+id/picture1"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email22"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"

        android:layout_marginTop="-3dp"
        android:text="@string/picture"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imagebutton1"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_below="@id/picture1"

        android:contentDescription="@string/picture"
        android:minHeight="100dp"
        android:src="@android:drawable/picture_frame"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/button22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imagebutton1"
        android:text="@string/pictureTaken" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button22"
        android:text="@string/button1" />

    <Button
        android:id="@+id/toolbar1"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button22"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="1dp"
        android:text="go to toolbar" />

</RelativeLayout>