<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability = "blocksDescendants"
    tools:context=".ChatRoomActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previousButton"
        android:focusable="false"
        android:clickable="false"
        android:text="@string/back"/>

    <ListView
        android:id="@+id/listview1"
        android:descendantFocusability = "blocksDescendants"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="338dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/buttonSend"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/send" />

        <EditText
            android:id="@+id/edittext1"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:autofillHints="text"
            android:hint="@string/textType"
            android:inputType="text"
            android:focusable="false"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/buttonReceive"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:height="80dp"
            android:focusable="false"
            android:clickable="false"
            android:text="@string/receive" />
    </LinearLayout>

</LinearLayout>