<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/details"
    tools:context=".DetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"

            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-1dp"
            android:layout_marginBottom="693dp"
            android:text="@string/hello_blank_fragment" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="-2dp"
            android:text="@string/id_fragment" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="-4dp"
            android:text="is a send message" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="691dp"
            android:layout_marginEnd="-4dp"
            android:text="@string/buttonhide" />

    </RelativeLayout>


</FrameLayout>